--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -488,6 +488,14 @@
     &-slider
       &__text
         width: 78%
+  .modal
+    &__dialog
+      transform: translate(-50%, 0)
+      top: 15px
+      left: 50%
+      height: calc(100% - 30px)
+      max-height: 490px
+      overflow: auto
 
 @media (min-width: 320px) and (max-width: 479px)
   .container
