--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,6 +6,10 @@ body
   color: $text-color
   background-color: $secondary
 
+.body
+  &-overflow
+    overflow: hidden
+
 .container
   max-width: 1110px
   margin: auto
